[package]
name = "medal"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
default-run = "medal"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
lua51-lifter = { path = "../lua51-lifter" }
luau-lifter = { path = "../luau-lifter" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["clock"] }
tower-http = { version = "0.6", features = ["fs"] }